--- a/app/src/main/res/layout/activity_tutorial_step2.xml
+++ b/app/src/main/res/layout/activity_tutorial_step2.xml
@@ -50,8 +50,41 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/layout_next_hint"
         android:src="@drawable/tutorial_2"></ImageView>
 
+    <LinearLayout
+        android:id="@+id/layout_next_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/text_next"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:text="Start calibration"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textColor="#306D88"
+            android:textSize="20sp"
+            android:background="#fff">
+        </TextView>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="12dp"
+            android:src="@drawable/ic_keyboard_arrow_right_black_24dp">
+
+        </ImageView>
+    </LinearLayout>
     <Button
         android:visibility="gone"
         android:id="@+id/button_next"
