--- a/app/src/main/res/layout/item_list_device.xml
+++ b/app/src/main/res/layout/item_list_device.xml
@@ -95,12 +95,12 @@
 <!--                        android:clickable="true"-->
 <!--                        android:onClick="clickEvent">-->
 <!--                    </ImageView>-->
-                    <View
-                        android:id="@+id/btn_menu"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:background="@drawable/ic_settings_black_24dp">
-                    </View>
+<!--                    <View-->
+<!--                        android:id="@+id/btn_menu"-->
+<!--                        android:layout_width="28dp"-->
+<!--                        android:layout_height="28dp"-->
+<!--                        android:background="@drawable/ic_settings_black_24dp">-->
+<!--                    </View>-->
                 </LinearLayout>
             </RelativeLayout>
 
