--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -1,11 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/textView_name"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></TextView>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"></ImageView>
+
+    <TableLayout
+        android:id="@+id/tableLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp">
+        <TableRow android:layout_marginTop="12dp">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:text="Name:"></TextView>
+            <TextView
+                android:id="@+id/textView_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"></TextView>
+        </TableRow>
+        <TableRow android:layout_marginTop="12dp">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:text="Temperature:"></TextView>
+            <TextView
+                android:id="@+id/textView_temperature"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"></TextView>
+        </TableRow>
+        <TableRow android:layout_marginTop="12dp">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:text="Time:"></TextView>
+            <TextView
+                android:id="@+id/textView_time"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"></TextView>
+        </TableRow>
+        <TableRow android:layout_marginTop="12dp">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:text="Mask:"></TextView>
+            <TextView
+                android:id="@+id/textView_mask"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"></TextView>
+        </TableRow>
+
+
+    </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
