--- a/app/src/main/res/layout/activity_device_calibration.xml
+++ b/app/src/main/res/layout/activity_device_calibration.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -66,7 +66,24 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/button_save"
         android:orientation="vertical"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:gravity="center">
+
+        <io.github.controlwear.virtual.joystick.android.JoystickView
+            xmlns:custom="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/joystick"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            custom:JV_buttonColor="#fff"
+            custom:JV_buttonSizeRatio="35%"
+            custom:JV_borderColor="#000"
+            custom:JV_backgroundColor="#000"
+            custom:JV_borderWidth="4dp"
+            custom:JV_fixedCenter="false"
+            app:layout_constraintTop_toBottomOf="@+id/button_connect"
+            custom:layout_constraintStart_toStartOf="parent"
+            custom:layout_constraintEnd_toEndOf="parent"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
