--- a/app/src/main/res/layout/activity_device_calibration.xml
+++ b/app/src/main/res/layout/activity_device_calibration.xml
@@ -57,7 +57,8 @@
             android:id="@+id/imageView_thermal"
             android:alpha="0.5"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ImageView>
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"></ImageView>
 
     </RelativeLayout>
 
@@ -103,7 +104,7 @@
 
             <SeekBar
                 android:id="@+id/seekBar_width"
-                android:layout_width="130dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
