--- a/app/src/main/res/layout/activity_device_calibration.xml
+++ b/app/src/main/res/layout/activity_device_calibration.xml
@@ -88,7 +88,22 @@
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/button_save">
 
+            <RelativeLayout
+                android:layout_width="150dp"
+                android:layout_height="100dp">
+                <Button android:id="@+id/button_up" android:textSize="30sp" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginStart="50dp"
+                    android:text="↑"></Button>
+                <Button android:id="@+id/button_left" android:textSize="30sp" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginTop="25dp"
+                    android:text="←"></Button>
+                <Button android:id="@+id/button_right" android:textSize="30sp" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginTop="25dp" android:layout_marginStart="100dp"
+                    android:text="→"></Button>
+                <Button android:id="@+id/button_down" android:textSize="30sp" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginStart="50dp" android:layout_marginTop="50dp"
+                    android:text="↓"></Button>
+
+            </RelativeLayout>
+
             <io.github.controlwear.virtual.joystick.android.JoystickView xmlns:custom="http://schemas.android.com/apk/res-auto"
+                android:visibility="gone"
                 android:id="@+id/joystick"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
