--- a/app/src/main/res/layout/activity_network_wifilist.xml
+++ b/app/src/main/res/layout/activity_network_wifilist.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:text="改回熱點模式">
+        android:text="@string/reset_to_hotspot">
     </Button>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
