--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,16 +32,18 @@
                 android:textColor="#FF40C4F6"
                 android:textSize="24sp">
             </TextView>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#40C4F6"
-                android:layout_alignParentBottom="true">
-            </View>
         </RelativeLayout>
 
 
     </androidx.appcompat.widget.Toolbar>
+    <View
+        android:id="@+id/hr_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#40C4F6"
+        android:layout_alignParentBottom="true">
+    </View>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -64,7 +66,7 @@
         app:layout_constraintBottom_toTopOf="@id/nav_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/hr_toolbar"
         app:navGraph="@navigation/mobile_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
