--- a/app/src/main/res/layout/item_list_people.xml
+++ b/app/src/main/res/layout/item_list_people.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:layout_width="76dp"
         android:layout_height="0dp"
         android:layout_margin="2dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintDimensionRatio="1">
     </ImageView>
 
     <TextView
         android:id="@+id/textView_peopleName"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:lines="1"
         android:singleLine="true"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"></TextView>
+        android:textAlignment="textStart"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#000"
+        android:gravity="center|start"
+        android:layout_marginStart="10dp"></TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
