--- a/app/src/main/res/layout/activity_network_wifilist.xml
+++ b/app/src/main/res/layout/activity_network_wifilist.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="WIFI"
+                android:text="Wi-Fi"
                 android:textColor="#FF40C4F6"
                 android:textSize="24sp">
             </TextView>
