--- a/app/src/main/res/layout/item_list_people2.xml
+++ b/app/src/main/res/layout/item_list_people2.xml
@@ -53,41 +53,79 @@
         android:layout_toRightOf="@+id/face_icon_layout"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView_peopleName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:ellipsize="marquee"
-            android:gravity="bottom"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:singleLine="true"
-            android:textSize="16sp" />
-<!--        android:textColor="@color/textColorPrimary"-->
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Name: " />
+
+            <TextView
+                android:id="@+id/textView_peopleName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:gravity="bottom"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Age:" />
+
+            <TextView
+                android:id="@+id/textView_age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:gravity="top"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Gender:" />
+
+            <TextView
+                android:id="@+id/textView_gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:gravity="top"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <!--        android:textColor="@color/textColorPrimary"-->
 
 
-        <TextView
-            android:id="@+id/textView_age"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="marquee"
-            android:gravity="top"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:singleLine="true"
-            android:textSize="14sp" />
-<!--        android:textColor="@color/textColorSecondary"-->
-
-        <TextView
-            android:id="@+id/textView_gender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="marquee"
-            android:gravity="top"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:singleLine="true"
-            android:textSize="14sp" />
+        <!--        android:textColor="@color/textColorSecondary"-->
 
     </LinearLayout>
 
