--- a/app/src/main/res/layout/item_list_people2.xml
+++ b/app/src/main/res/layout/item_list_people2.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/people_icon" />
+            app:srcCompat="@drawable/face_code_image" />
 
     </FrameLayout>
 
